# game_server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_linux.sh
assist/: README.md
assist/annotation/: main.py  role_interface.h  role_rmi.h
assist/annotation/rmi/: rmi.py
cfg/: svc_global_cfg.yaml
src/: CMakeLists.txt
src/config/: CMakeLists.txt  manager_def.cpp  manager_def.h
src/core/: CMakeLists.txt
src/core/module/: component.h  manager.h  module.h  player.h  rmi.h
src/core/net_io/: CMakeLists.txt  lib_net_io.cpp  lib_net_io.h  net_io_info.cpp  net_io_info.h  net_io_interface.h  net_io_linux.cpp  net_io_linux.h  net_io_win32.cpp  net_io_win32.h
src/core/net_msg/: CMakeLists.txt  net_msg_info.h  (+3 more)
src/demo/: demo_info.h  demo_interface.h  demo_manager.cpp  demo_manager.h  demo_player.cpp
src/logic/: CMakeLists.txt
src/svc_launch/: CMakeLists.txt  main.cpp
src/test/: binary_stream_test.cpp  binary_stream_test.h  test.cpp  test_buffer.cpp  test_buffer.h  test_net_io.cpp  test_net_io.h
win32/: common.props  new_projct.bat  svc_launch.sln
win32/projects/: cfg_parser.vcxproj  config.vcxproj  coroutine.vcxproj  demo.vcxproj  demo.vcxproj.filters  global_var.vcxproj  module.vcxproj  net_io.vcxproj  net_io.vcxproj.filters  net_msg.vcxproj  net_msg.vcxproj.filters  platform.vcxproj  platform.vcxproj.filters  role.vcxproj  role.vcxproj.filters  rpc.vcxproj  rpc.vcxproj.filters  safe.vcxproj  safe.vcxproj.filters  stream.vcxproj  svc.vcxproj  svc_info.vcxproj  svc_launch.vcxproj  svc_launch.vcxproj.filters  test.vcxproj  tools.vcxproj
(+44 files in other folders)
